# map_maker

./: .gitignore  Cargo.toml  MANIFEST.in  cli.py  generate.py  init.py  mypy.ini  pyproject.toml  readme.md  requirements.txt  ruff.toml
configs/: biosphere_validation.yaml  cubed_sphere_crust_state.yaml  cubed_sphere_tectonics.yaml  default.yaml  l2_regional_handoff.yaml  l3_vertical_slice.yaml  mineral_systems_validation.yaml  physical_atlas.yaml  pipeline.yaml  validation.yaml
docs/: DECISIONS.md  NOTES.md  PLANET_ENGINE_SPEC.md  README.md  ROADMAP.md  VALIDATION.md  spec.md  standards.md
docs/archive/: README.md
docs/archive/status/: working-notes-pre-consolidation.md
docs/archive/superseded-stage-plans/: 00_pipeline_overview.md  10_populations.md
docs/archive/validation/: 2026-07-canonical-validation-baseline.md
docs/plans/: 2026-07-23-l3-ecology-readiness.md
docs/specs/: 00_pipeline_overview.md  01_framework.md  02_topology.md  02a_planetary_forcing.md  03_sea_level.md  04_tectonics.md  05_world_age.md  06_erosion.md  07_elevation.md  08_climate_hydrology.md  08a_basin_refinement.md  08b_basin_erosion.md  08c_hydrology_pass2.md  08d_surface_water_balance.md  08e_outlet_incision.md  08f_hydrology_validation.md  08g_lake_hydrographs.md  08h_cryosphere.md  09_soils_biomes.md  09a_surface_materials_initial_soils.md  09b_environmental_biosphere_envelope.md  09c_trait_first_potential_biosphere.md  09d_earth_biosphere_validation.md  09e_functional_vegetation.md  09f_functional_vegetation_validation.md  09g_derived_biomes.md  11_physical_atlas_export.md  12_l2_regional_handoff.md  13_l3_vertical_slice.md  14_causal_mineral_systems.md
src/map_maker/: __init__.py  _native.py  cli.py  generate.py  native_build.py
src/map_maker/core/: __init__.py  hydrology.py  tectonics.py
src/map_maker/io/: __init__.py  geo.py
src/map_maker/legacy/: __init__.py  cli.py  generate.py
src/map_maker/pipeline/: __init__.py  _biosphere_envelope_native.py  _climate_native.py  atlas.py  (+44 more)
tests/: conftest.py  test_atlas.py  test_atmosphere.py  test_basin_erosion.py  test_basin_refinement.py  test_biosphere_ensemble.py  test_biosphere_envelope.py  test_biosphere_validation.py  test_climate.py  test_cryosphere.py  test_cubed_sphere.py  test_derived_biomes.py  test_derived_biomes_validation.py  test_earth_relief_kpis.py  test_elevation.py  test_erosion.py  test_functional_vegetation.py  test_functional_vegetation_validation.py  test_geology.py  test_geometry_stage.py  test_hydro_invariants.py  test_hydrology.py  test_hydrology_pass2.py  test_l3_channel_geometry.py  test_l3_ecology.py  test_l3_hydrology.py  test_l3_surface_materials.py  test_l3_target.py  test_l3_terrain.py  test_mineral_systems.py  test_mineral_systems_ensemble.py  test_native_loader.py  test_outlet_incision.py  test_pipeline_framework.py  test_pipeline_generate.py  test_planet.py  test_potential_biosphere.py  test_regional_handoff.py  test_sea_level.py  test_smoke.py  (+7 more)
(+88 files in other folders)
