[workspace]
members = [
    "src/map_maker/pipeline/native/climate",
    "src/map_maker/pipeline/native/biosphere_envelope",
    "src/map_maker/pipeline/native/cryosphere",
    "src/map_maker/pipeline/native/elevation",
    "src/map_maker/pipeline/native/erosion",
    "src/map_maker/pipeline/native/fluvial",
    "src/map_maker/pipeline/native/functional_vegetation",
    "src/map_maker/pipeline/native/geology",
    "src/map_maker/pipeline/native/hydrology",
    "src/map_maker/pipeline/native/hydrology_pass2",
    "src/map_maker/pipeline/native/planet",
    "src/map_maker/pipeline/native/potential_biosphere",
    "src/map_maker/pipeline/native/refinement",
    "src/map_maker/pipeline/native/surface_water",
    "src/map_maker/pipeline/native/surface_materials",
    "src/map_maker/pipeline/native/tectonics",
    "src/map_maker/pipeline/native/topology",
    "src/map_maker/pipeline/native/world_age",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
rand = "0.8.6"
rand_chacha = "0.3.1"
rayon = "1.12.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
