[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "map-maker"
version = "0.1.0"
description = "Deterministic, multi-resolution planetary history and map generation"
readme = "readme.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cffi>=1.17,<2",
    "noise>=1.2.2,<2",
    "numpy>=2.1,<3",
    "pillow>=10.4,<13",
    "pyarrow>=17,<23",
    "pyyaml>=6,<7",
    "rasterio>=1.4,<2",
    "scipy>=1.14,<2",
    "shapely>=2,<3",
    "zarr>=2.18,<3",
]

[project.optional-dependencies]
dev = [
    "black>=24.8,<27",
    "mypy>=1.11,<2",
    "pytest>=8.3,<10",
    "ruff>=0.6,<1",
]

[project.scripts]
map-maker = "map_maker.cli:main"
map-maker-build-native = "map_maker.native_build:main"
map-maker-legacy = "map_maker.legacy.cli:main"
map-maker-pipeline = "map_maker.pipeline.tools:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]
